--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.loading-animation {
+  animation: sending 2s infinite;
+  overflow: hidden;
+  width: fit-content;
+  margin: 0 auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes sending {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100px;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@media screen and (max-width: 600px) {
+  @keyframes sending {
+    from {
+      width: 0;
+    }
+    to {
+      width: 85px;
+    }
   }
 }
